# fr3-miahand

fr3_miahand/: CMakeLists.txt  package.xml
fr3_miahand_description/: CMakeLists.txt  package.xml
fr3_miahand_description/launch/: view_fr3_mia_rviz.launch
fr3_miahand_description/robots/common/: flange_deg_90.xacro  franka_arm.xacro  franka_robot.xacro  mia_adapter.xacro  properties.xacro  utils.xacro
fr3_miahand_description/robots/extra/: arm_base.urdf.xacro  table.xacro
fr3_miahand_description/robots/fr3/: fr3_miahand.urdf.xacro
fr3_miahand_description/robots/mia/: mia_hand.urdf.xacro  mia_hand_flange.xacro  mia_hand_on_ur_flange.urdf.xacro
fr3_miahand_description/rviz/: view_fr3_miahand.rviz
fr3_miahand_gazebo/: CMakeLists.txt  package.xml
fr3_miahand_gazebo/config/: fr3_sim_controllers.yaml
fr3_miahand_gazebo/launch/: fr3_miahand_gazebo.launch
